ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Last_Drop_Screen__c.field-meta.xml
<CustomField>
    <fullName>Last_Drop_Screen__c</fullName>
    <description>Used in D2C</description>
    <label>Last Journey Drop Screen</label>
    <length>255</length>
    <type>Text</type>
</CustomField>