ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Last_Sales_User__c.field-meta.xml
<CustomField>
    <fullName>Last_Sales_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Sales User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Loan_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>