ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/LastStageName__c.field-meta.xml
<CustomField>
    <fullName>LastStageName__c</fullName>
    <label>Last Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Loan Initiation</fullName>
            </value>
            <value>
                <fullName>Additional Details</fullName>
            </value>
            <value>
                <fullName>Asset Details</fullName>
            </value>
            <value>
                <fullName>Vehicle Valuation</fullName>
            </value>
            <value>
                <fullName>Vehicle Insurance</fullName>
            </value>
            <value>
                <fullName>Loan Details</fullName>
            </value>
            <value>
                <fullName>Income Details</fullName>
            </value>
            <value>
                <fullName>Insurance Details</fullName>
            </value>
            <value>
                <fullName>Final Terms</fullName>
            </value>
            <value>
                <fullName>Journey Stop</fullName>
            </value>
            <value>
                <fullName>Offer Screen</fullName>
            </value>
            <value>
                <fullName>Customer Code Addition</fullName>
            </value>
            <value>
                <fullName>Final Offer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>