ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Lead_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>Lead_Creation_Date__c</fullName>
    <description>Field used in DSA&apos;s list view</description>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Creation Date</label>
    <type>DateTime</type>
</CustomField>