ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Lead_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Lead_Modified_Date__c</fullName>
    <description>Field used in DSA&apos;s list view</description>
    <formula>LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Modified Date</label>
    <type>DateTime</type>
</CustomField>