ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Lead_Name__c.field-meta.xml
<CustomField>
    <fullName>Lead_Name__c</fullName>
    <label>Lead Name</label>
    <type>AutoNumber</type>
</CustomField>