ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Lead_number__c.field-meta.xml
<CustomField>
    <fullName>Lead_number__c</fullName>
    <label>Lead Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>