ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Lead_Number_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Lead_Number_Sequence__c</fullName>
    <description>This sequence would be used to generate Lead Number suffix.</description>
    <label>Lead Number Sequence</label>
    <type>AutoNumber</type>
</CustomField>