ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <formula>IF(OR(ISPICKVAL( LeadSource , &apos;Digital-MSIL-Custom&apos;),ISPICKVAL( LeadSource , &apos;Digital-Mahindra-Custom&apos;),ISPICKVAL( LeadSource , &apos;Digital-Mahindra-PreA&apos;)), &apos;Digital Lead&apos;,  IF( ISPICKVAL(Sub_Stage__c, &apos;Final Terms&apos;) ,  TEXT(Refered_By__c) , &apos;&apos;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Source</label>
    <type>Text</type>
</CustomField>