ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Lead_Source_Non_Ind__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Non_Ind__c</fullName>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Own</fullName>
            </value>
            <value>
                <fullName>Dealer</fullName>
            </value>
            <value>
                <fullName>DSA</fullName>
            </value>
            <value>
                <fullName>Existing Customer,</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Synergy</fullName>
            </value>
            <value>
                <fullName>Pre-Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>