ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Loan_amount__c.field-meta.xml
<CustomField>
    <fullName>Loan_amount__c</fullName>
    <label>Loan amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>