ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Loan_Application_Name__c.field-meta.xml
<CustomField>
    <fullName>Loan_Application_Name__c</fullName>
    <description>To not edit Loan Application</description>
    <formula>HYPERLINK(&quot;/&quot;&amp; Id, Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan Application Name</label>
    <type>Text</type>
</CustomField>