ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Loan_Application_Number__c.field-meta.xml
<CustomField>
    <fullName>Loan_Application_Number__c</fullName>
    <label>Loan Application Number</label>
    <type>AutoNumber</type>
</CustomField>