ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Loan_Categorization__c.field-meta.xml
<CustomField>
    <fullName>Loan_Categorization__c</fullName>
    <label>Loan Categorization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PSL</fullName>
            </value>
            <value>
                <fullName>Non-PSL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>