ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Loan_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Loan_Created_Date__c</fullName>
    <description>Used to capture loan created date when application got revoked multiple times.</description>
    <label>Loan Created Date</label>
    <length>100</length>
    <type>Text</type>
</CustomField>