ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Loan_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Loan_Total_Amount__c</fullName>
    <label>Loan Amount</label>
    <summarizedField>Vehicle_Detail__c.Loan_Amount__c</summarizedField>
    <summaryForeignKey>Vehicle_Detail__c.Loan_Application__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>