ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Loan_Type__c.field-meta.xml
<CustomField>
    <fullName>Loan_Type__c</fullName>
    <label>Loan Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0006</fullName>
                <label>Loan Against Cards  Deposits  Receipts  Receivables</label>
            </value>
            <value>
                <fullName>0100</fullName>
                <label>Cash Credit</label>
            </value>
            <value>
                <fullName>0200</fullName>
                <label>Overdraft</label>
            </value>
            <value>
                <fullName>0500</fullName>
                <label>Packing Credit</label>
            </value>
            <value>
                <fullName>0630</fullName>
                <label>Export Bills - Discounted  Purchased  Advanced Against</label>
            </value>
            <value>
                <fullName>0640</fullName>
                <label>Term Loans</label>
            </value>
            <value>
                <fullName>0710</fullName>
                <label>Inland Bills - Discounted  Purchased</label>
            </value>
            <value>
                <fullName>0800</fullName>
                <label>Advances Against Export Cash Incentives  Import Bills</label>
            </value>
            <value>
                <fullName>0801</fullName>
                <label>Working Capital Loans</label>
            </value>
            <value>
                <fullName>0900</fullName>
                <label>Foreign Currency Cheques  Dds  Tcs</label>
            </value>
            <value>
                <fullName>1100</fullName>
                <label>Hire Purchase  Lease</label>
            </value>
            <value>
                <fullName>2000</fullName>
                <label>Bank Guarantee</label>
            </value>
            <value>
                <fullName>3000</fullName>
                <label>Letters Of Credit</label>
            </value>
            <value>
                <fullName>4000</fullName>
                <label>Commercial Vehicle Loan</label>
            </value>
            <value>
                <fullName>9999</fullName>
                <label>Others</label>
            </value>
            <value>
                <fullName>cards/Deposites/receipts/receivables</fullName>
                <isActive>false</isActive>
                <label>cards/Deposites/receipts/receivables</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>