ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/LTV__c.field-meta.xml
<CustomField>
    <fullName>LTV__c</fullName>
    <formula>IF( Vehicle_Type__c == &apos;New&apos;,IF(Funding_on_Ex_Showroom__c==true, Basic_Price__c -  Discount_on_Basic_Price__c ,(IF( Funding_on_ORP__c ==true, Basic_Price__c +  RTO_Road_Tax__c +  X1st_yr_Insurance_Premium__c +  Other_charges__c +  GST_Amount__c -  Discount_on_Basic_Price__c ,0))),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LTV Invoice Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>