ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Main_Dealer_Incentive_Amount__c.field-meta.xml
<CustomField>
    <fullName>Main_Dealer_Incentive_Amount__c</fullName>
    <label>Main Dealer Incentive Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>