ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Major_Industry__c.field-meta.xml
<CustomField>
    <fullName>Major_Industry__c</fullName>
    <label>Major Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AGRICULTURE</fullName>
            </value>
            <value>
                <fullName>COAL MINING</fullName>
            </value>
            <value>
                <fullName>CONSTRUCTION COMPANY</fullName>
            </value>
            <value>
                <fullName>DAIRY FARMING</fullName>
            </value>
            <value>
                <fullName>HOTEL AND RESTUARENT</fullName>
            </value>
            <value>
                <fullName>OFFICE CUM RESIDENCE</fullName>
            </value>
            <value>
                <fullName>POULTRY FARMING</fullName>
            </value>
            <value>
                <fullName>SAND QUARRYING</fullName>
            </value>
            <value>
                <fullName>SUGAR</fullName>
            </value>
            <value>
                <fullName>TRANSPORTER</fullName>
            </value>
            <value>
                <fullName>WATR SUPPLIER</fullName>
            </value>
            <value>
                <fullName>CONTRACTOR</fullName>
            </value>
            <value>
                <fullName>AQUACULTURE</fullName>
            </value>
            <value>
                <fullName>BRICKS</fullName>
            </value>
            <value>
                <fullName>RICE - MERCHANT/MILL</fullName>
            </value>
            <value>
                <fullName>BUSINESS- STONE - SUPPLIER</fullName>
            </value>
            <value>
                <fullName>MUNICIPAL - CORPORATION</fullName>
            </value>
            <value>
                <fullName>TIMBER</fullName>
            </value>
            <value>
                <fullName>HARDWARE SHOP - RETAIL</fullName>
            </value>
            <value>
                <fullName>HEALTH AND SOCIAL WORK</fullName>
            </value>
            <value>
                <fullName>EDUCATION</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>