ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/mapped_BE__c.field-meta.xml
<CustomField>
    <fullName>mapped_BE__c</fullName>
    <description>this stores the mapped BE found in D2C BE mapping API. This BE will be assigned later when initial offer will generate</description>
    <label>mapped BE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>