ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Mark_Priority__c.field-meta.xml
<CustomField>
    <fullName>Mark_Priority__c</fullName>
    <formula>IF(ISPICKVAL($User.UserType, &apos;PowerPartner&apos;), HYPERLINK(&quot;/partners/s/markpriority?c__recordId=&quot;+Id, &quot;Click to Mark Priority&quot;, &quot;_self&quot;), HYPERLINK(&quot;/lightning/cmp/c__markLoanApplicationAsPriority?c__recordId=&quot;+Id, &quot;Click to Mark Priority&quot;, &quot;_self&quot;))</formula>
    <label>Mark Priority</label>
    <type>Text</type>
</CustomField>