ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Max_Loan_amount__c.field-meta.xml
<CustomField>
    <fullName>Max_Loan_amount__c</fullName>
    <label>Max Loan amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>