ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Maximum_tenure__c.field-meta.xml
<CustomField>
    <fullName>Maximum_tenure__c</fullName>
    <label>Maximum tenure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>