ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Mfr_Expence_Reimburse__c.field-meta.xml
<CustomField>
    <fullName>Mfr_Expence_Reimburse__c</fullName>
    <label>Mfr Expence Reimburse %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>