ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Mfr_Expence_Reimburse_Amt__c.field-meta.xml
<CustomField>
    <fullName>Mfr_Expence_Reimburse_Amt__c</fullName>
    <label>Mfr Expence Reimburse Amt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>