ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Mfr_Incentive__c.field-meta.xml
<CustomField>
    <fullName>Mfr_Incentive__c</fullName>
    <label>Mfr Incentive</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>