ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Min_Loan_amount__c.field-meta.xml
<CustomField>
    <fullName>Min_Loan_amount__c</fullName>
    <label>Min Loan amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>