ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Minimum_tenure__c.field-meta.xml
<CustomField>
    <fullName>Minimum_tenure__c</fullName>
    <label>Minimum tenure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>