ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Minor_Industry__c.field-meta.xml
<CustomField>
    <fullName>Minor_Industry__c</fullName>
    <label>Minor Industry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>