ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Motor_Insurance_Premium__c.field-meta.xml
<CustomField>
    <fullName>Motor_Insurance_Premium__c</fullName>
    <label>Motor Insurance Premium</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>