ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Msil_Latest_Status__c.field-meta.xml
<CustomField>
    <fullName>Msil_Latest_Status__c</fullName>
    <label>Msil Latest Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>