ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Net_LTV__c.field-meta.xml
<CustomField>
    <fullName>Net_LTV__c</fullName>
    <description>need to write formula based on user story</description>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net LTV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>