ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/No_of_Applicants__c.field-meta.xml
<CustomField>
    <fullName>No_of_Applicants__c</fullName>
    <label>No of Applicants</label>
    <summaryFilterItems>
        <field>Applicant__c.In_Active_Applicant__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Applicant__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>