ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/NOC__c.field-meta.xml
<CustomField>
    <fullName>NOC__c</fullName>
    <formula>TEXT(NOC_Number__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NOC</label>
    <type>Text</type>
</CustomField>