ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/NOC_Number__c.field-meta.xml
<CustomField>
    <fullName>NOC_Number__c</fullName>
    <label>NOC Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>