ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Non_Dealer_DSM_Name2__c.field-meta.xml
<CustomField>
    <fullName>Non_Dealer_DSM_Name2__c</fullName>
    <label>Non Dealer DSM Name2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>