ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Non_Funded__c.field-meta.xml
<CustomField>
    <fullName>Non_Funded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non-Funded</label>
    <type>Checkbox</type>
</CustomField>