ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Non_PSL_Categorization__c.field-meta.xml
<CustomField>
    <fullName>Non_PSL_Categorization__c</fullName>
    <label>Non-PSL Categorization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N1: Traders Retail-Non-MSME</fullName>
            </value>
            <value>
                <fullName>N2: Traders Wholesale-Non-MSME</fullName>
            </value>
            <value>
                <fullName>N3: COMMERCIAL &amp; INDUSTRIAL SECTOR (MANUFACTURING)</fullName>
            </value>
            <value>
                <fullName>N4: COMMERCIAL &amp; INDUSTRIAL SECTOR (SERVICES)</fullName>
            </value>
            <value>
                <fullName>N5: NPSL Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>