ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Number_of_Products__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Products__c</fullName>
    <label>Number of Products</label>
    <summaryForeignKey>Vehicle_Detail__c.Loan_Application__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>