ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/OEM_Dealer_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>OEM_Dealer_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OEM Dealer	Checkbox</label>
    <type>Checkbox</type>
</CustomField>