ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/On_Road_price_carwale__c.field-meta.xml
<CustomField>
    <fullName>On_Road_price_carwale__c</fullName>
    <label>On Road price carwale</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>