ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Other_charges__c.field-meta.xml
<CustomField>
    <fullName>Other_charges__c</fullName>
    <label>Other charges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>