ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/OTP_for_borrower__c.field-meta.xml
<CustomField>
    <fullName>OTP_for_borrower__c</fullName>
    <label>OTP for borrower</label>
    <length>255</length>
    <type>Text</type>
</CustomField>