ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Owner_Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Profile_Name__c</fullName>
    <formula>Owner.Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Profile Name</label>
    <type>Text</type>
</CustomField>