ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/OwnHouseflag__c.field-meta.xml
<CustomField>
    <fullName>OwnHouseflag__c</fullName>
    <description>This value come from the IBM D2C app.</description>
    <label>Own House Flag</label>
    <length>10</length>
    <type>Text</type>
</CustomField>