ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Parent_Deal_number__c.field-meta.xml
<CustomField>
    <fullName>Parent_Deal_number__c</fullName>
    <label>Parent Deal number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>