ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Parent_Loan_Application__c.field-meta.xml
<CustomField>
    <fullName>Parent_Loan_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Revoked parent application</description>
    <label>Parent Loan Application</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Loan_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>