ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Payment_Request_Generation_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Request_Generation_Date__c</fullName>
    <label>Payment Request Generation Date</label>
    <type>DateTime</type>
</CustomField>