ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Performance_Upgrade__c.field-meta.xml
<CustomField>
    <fullName>Performance_Upgrade__c</fullName>
    <label>Performance Upgrade</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>