ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/PreviousAccountId__c.field-meta.xml
<CustomField>
    <fullName>PreviousAccountId__c</fullName>
    <label>PreviousAccountId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>