ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Priority_Flag__c.field-meta.xml
<CustomField>
    <fullName>Priority_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Priority Flag</label>
    <type>Checkbox</type>
</CustomField>