ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ALL</fullName>
            </value>
            <value>
                <fullName>Two Wheeler</fullName>
            </value>
            <value>
                <fullName>Passenger Vehicles</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>H</fullName>
            </value>
            <value>
                <fullName>Tractor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>