ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Profile__c.field-meta.xml
<CustomField>
    <fullName>Profile__c</fullName>
    <label>Profile</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACCOUNTANT</fullName>
            </value>
            <value>
                <fullName>ADVOCATE</fullName>
            </value>
            <value>
                <fullName>AGRICULTURE PRODUCE</fullName>
            </value>
            <value>
                <fullName>AGRICULTURIST</fullName>
            </value>
            <value>
                <fullName>AQUACULTURE</fullName>
            </value>
            <value>
                <fullName>ASSOCIATION</fullName>
            </value>
            <value>
                <fullName>AUTO CONSULTANT</fullName>
            </value>
            <value>
                <fullName>AUTO OWNER</fullName>
            </value>
            <value>
                <fullName>AUTOMOBILE ANCILLARY</fullName>
            </value>
            <value>
                <fullName>AUTOMOBILE DEALERS</fullName>
            </value>
            <value>
                <fullName>AUTOMOBILE MANUFACTURER</fullName>
            </value>
            <value>
                <fullName>BAKERY</fullName>
            </value>
            <value>
                <fullName>BAKERY &amp; SMALL FOOD RETAILS</fullName>
            </value>
            <value>
                <fullName>BANK EMPLOYEE</fullName>
            </value>
            <value>
                <fullName>BAR OWNER</fullName>
            </value>
            <value>
                <fullName>BEAUTY PARLOR</fullName>
            </value>
            <value>
                <fullName>BED WORKER</fullName>
            </value>
            <value>
                <fullName>BIDI WORK</fullName>
            </value>
            <value>
                <fullName>BLDG. CONTRACTOR</fullName>
            </value>
            <value>
                <fullName>BLUE METAL</fullName>
            </value>
            <value>
                <fullName>BOOK SHOP - RETAIL</fullName>
            </value>
            <value>
                <fullName>BRICKS - MFGR</fullName>
            </value>
            <value>
                <fullName>BROKER</fullName>
            </value>
            <value>
                <fullName>BUILDER</fullName>
            </value>
            <value>
                <fullName>BUSINESS - MASALA POWER</fullName>
            </value>
            <value>
                <fullName>BUSINESS- STONE - SUPPLIER</fullName>
            </value>
            <value>
                <fullName>CABLE</fullName>
            </value>
            <value>
                <fullName>CANDLE -MFGRS</fullName>
            </value>
            <value>
                <fullName>CANTEEN &amp; MESS</fullName>
            </value>
            <value>
                <fullName>CARPENTER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>