ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Provisional_Channel_Cost__c.field-meta.xml
<CustomField>
    <fullName>Provisional_Channel_Cost__c</fullName>
    <label>Provisional Channel Cost</label>
    <length>255</length>
    <type>Text</type>
</CustomField>