ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/PSL_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>PSL_Sub_Type__c</fullName>
    <label>PSL Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agri - Individual</fullName>
            </value>
            <value>
                <fullName>Agri - Non- Individual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>