ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/RC_Number__c.field-meta.xml
<CustomField>
    <fullName>RC_Number__c</fullName>
    <label>RC Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>