ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/RE_KYC_Stage__c.field-meta.xml
<CustomField>
    <fullName>RE_KYC_Stage__c</fullName>
    <label>RE KYC Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PreInitialOffer</fullName>
            </value>
            <value>
                <fullName>PostInitialOffer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>