ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Received_AML_API_response__c.field-meta.xml
<CustomField>
    <fullName>Received_AML_API_response__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Received AML API response</label>
    <type>Checkbox</type>
</CustomField>