ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Recommendation_for_the_Loan__c.field-meta.xml
<CustomField>
    <fullName>Recommendation_for_the_Loan__c</fullName>
    <label>Recommendation for the Loan</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>