ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Refered_By__c.field-meta.xml
<CustomField>
    <fullName>Refered_By__c</fullName>
    <label>Refered  By</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Referrer</fullName>
            </value>
            <value>
                <fullName>Exist</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>